--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "empty-project-template",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react-native-stage-0": "^1.0.1"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,6 +14,10 @@
   },
   "dependencies": {
     "expo": "^30.0.1",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.1.0",
+    "native-base": "^2.8.0",
+    "react-navigation": "^2.14.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
   }
